# haskell-hedgehog

./: .ghci  TODO  stack.yaml
hedgehog-example/src/Test/Example/: Confidence.hs
hedgehog-test-laws/: hedgehog-test-laws.cabal
hedgehog-test-laws/test/: test.hs
hedgehog/src/Hedgehog/Internal/: Report.hs
