version: 0

name:
  hedgehog-test-laws
author:
  Jacob Stanley
maintainer:
  Jacob Stanley <jacob@stanley.io>
homepage:
  https://hedgehog.qa
bug-reports:
  https://github.com/hedgehogqa/haskell-hedgehog/issues
synopsis:
  hedgehog-test-laws
description:
  Verify that the Monad and Applicative instances in Hedgehog are correct.
category:
  Testing
license:
  BSD3
license-file:
  LICENSE
cabal-version:
  >= 1.8
build-type:
  Simple
tested-with:
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.5
  , GHC == 8.8.1

source-repository head
  type: git
  location: git://github.com/hedgehogqa/haskell-hedgehog.git

test-suite test
  type:
    exitcode-stdio-1.0

  main-is:
    test.hs

  ghc-options:
    -Wall -threaded -O2

  hs-source-dirs:
    test

  build-depends:
      hedgehog
    , base                            >= 3          && < 5
    , mtl
    , hedgehog-fn                     >= 1.0        && < 2.0
    , checkers                        >= 0.5        && < 0.6
    , QuickCheck                      >= 2.7        && < 2.14
    , tasty                           >= 1.2        && < 1.3
    , tasty-quickcheck                >= 0.10       && < 0.11

  if impl(ghc < 8.0)
    buildable: False
